fix aspect ratio of YT embeds on Safari

--- a/content/css/_base.scss
+++ b/content/css/_base.scss
@@ -107,10 +107,22 @@ $margin-content-wrapper: 3%;
   padding: 30px 0;
 }
 
-iframe { // YouTube videos
+.youtube iframe { // YouTube videos
   max-width: 100%;
   width: 100%;
-  aspect-ratio: 1.77; // 1.7777=16:9
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  // aspect-ratio: 1.77; // 1.7777=16:9, only available in Firefox
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; // 16:9 aspect ratio
 }
 
 .footer-container footer {
